[GPCAPIM-254]: Remove the lambda.
